<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sms.ComposeSmsActivity">

    <EditText
            android:id="@+id/smsNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:hint="@string/sms_phone_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/smsMsgEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:hint="@string/sms_message"
            app:layout_constraintTop_toBottomOf="@id/smsNumberEditText" />

    <Button
            android:id="@+id/sendMsgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_sms_button"
            android:visibility="invisible"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smsMsgEditText" />

    <TextView
            android:id="@+id/notDefaultAppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_default_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/changeDefaultAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_default_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notDefaultAppText" />

</androidx.constraintlayout.widget.ConstraintLayout>
